--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 beautifulsoup4==4.12.3
-google-auth==2.30.0
-pandas-gbq==0.23.1
-python-dotenv==1.0.1
-requests==2.32.3
+requests
+python-dotenv
+google-cloud-bigquery
+boto3
